--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.h2.console.enabled=true
+
+language.power.path=D:/project/bots/snowball/src/main/resources/static/language_power.json
+language.system.path=D:/project/bots/snowball/src/main/resources/static/language.json
