--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.h2.console.enabled=true
 
 language.power.path=D:/project/bots/snowball/src/main/resources/static/language_power.json
 language.system.path=D:/project/bots/snowball/src/main/resources/static/language.json
+languageV2.system.path=D:/project/bots/snowball/src/main/resources/static/languagev2.json
