--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,4 @@ spring.datasource.username=admin
 spring.datasource.password=password
 spring.h2.console.enabled=true
 
-language.power.path=D:/project/bots/snowball/src/main/resources/static/language_power.json
-language.system.path=D:/project/bots/snowball/src/main/resources/static/language.json
-languageV2.system.path=D:/project/bots/snowball/src/main/resources/static/languagev2.json
+language.path = D:/bruh/snowball/src/main/resources/static/language.json
